grammar/CParser.java
// Generated from grammar/C.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, BLOCK_COMMENT=3, DATA_TYPE_VARIABLE=4, LABEL=5, STRING=6, 
		NUMBER=7, END=8, OPERATOR_ASSIGN=9, OPERATOR_PLUS=10, OPERATOR_SUB=11, 
		OPERATOR_MULTIPLY=12, OPERATOR_DIVIDE=13, OPERATOR_INCREMENT=14, OPERATOR_DECREMENT=15, 
		OPERATOR_AND=16, OPERATOR_OR=17, OPERATOR_EQ=18, OPERATOR_GT=19, OPERATOR_GE=20, 
		OPERATOR_LT=21, OPERATOR_LE=22, SYMBOL_IF=23, SYMBOL_WHILE=24, SYMBOL_ELSE=25, 
		SYMBOL_TRUE=26, SYMBOL_FALSE=27, LEFT_BRACE=28, RIGHT_BRACE=29, LEFT_PAR=30, 
		RIGHT_PAR=31, EOL=32, WS=33;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_comment_section = 2, RULE_variable = 3, 
		RULE_function_parameter = 4, RULE_assign_operation = 5, RULE_other_expression = 6, 
		RULE_function_declaration = 7, RULE_func_call = 8, RULE_args_list = 9, 
		RULE_atom = 10, RULE_function_name = 11, RULE_lab = 12, RULE_multiplication_or_divide = 13, 
		RULE_add_or_substract = 14, RULE_block = 15, RULE_statement_if = 16, RULE_statement_while = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "comment_section", "variable", "function_parameter", 
			"assign_operation", "other_expression", "function_declaration", "func_call", 
			"args_list", "atom", "function_name", "lab", "multiplication_or_divide", 
			"add_or_substract", "block", "statement_if", "statement_while"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", null, null, null, null, null, null, "';'", "'='", "'+'", 
			"'-'", "'*'", "'/'", "'++'", "'--'", "'&&'", "'||'", "'=='", "'>'", "'>='", 
			"'<'", "'<='", "'if'", "'while'", "'else'", "'true'", "'false'", "'{'", 
			"'}'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "COMMENT", "BLOCK_COMMENT", "DATA_TYPE_VARIABLE", "LABEL", 
			"STRING", "NUMBER", "END", "OPERATOR_ASSIGN", "OPERATOR_PLUS", "OPERATOR_SUB", 
			"OPERATOR_MULTIPLY", "OPERATOR_DIVIDE", "OPERATOR_INCREMENT", "OPERATOR_DECREMENT", 
			"OPERATOR_AND", "OPERATOR_OR", "OPERATOR_EQ", "OPERATOR_GT", "OPERATOR_GE", 
			"OPERATOR_LT", "OPERATOR_LE", "SYMBOL_IF", "SYMBOL_WHILE", "SYMBOL_ELSE", 
			"SYMBOL_TRUE", "SYMBOL_FALSE", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_PAR", 
			"RIGHT_PAR", "EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << BLOCK_COMMENT) | (1L << DATA_TYPE_VARIABLE) | (1L << LABEL) | (1L << STRING) | (1L << NUMBER) | (1L << END) | (1L << OPERATOR_PLUS) | (1L << OPERATOR_SUB) | (1L << SYMBOL_IF) | (1L << SYMBOL_WHILE) | (1L << SYMBOL_TRUE) | (1L << SYMBOL_FALSE) | (1L << LEFT_PAR))) != 0)) {
				{
				{
				setState(36);
				statement();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Assign_operationContext assign_operation() {
			return getRuleContext(Assign_operationContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Comment_sectionContext comment_section() {
			return getRuleContext(Comment_sectionContext.class,0);
		}
		public Statement_ifContext statement_if() {
			return getRuleContext(Statement_ifContext.class,0);
		}
		public Statement_whileContext statement_while() {
			return getRuleContext(Statement_whileContext.class,0);
		}
		public Other_expressionContext other_expression() {
			return getRuleContext(Other_expressionContext.class,0);
		}
		public TerminalNode END() { return getToken(CParser.END, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				variable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				assign_operation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				function_declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				comment_section();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				statement_if();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				statement_while();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(48);
				other_expression(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(49);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comment_sectionContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(CParser.COMMENT, 0); }
		public TerminalNode BLOCK_COMMENT() { return getToken(CParser.BLOCK_COMMENT, 0); }
		public Comment_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterComment_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitComment_section(this);
		}
	}

	public final Comment_sectionContext comment_section() throws RecognitionException {
		Comment_sectionContext _localctx = new Comment_sectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_la = _input.LA(1);
			if ( !(_la==COMMENT || _la==BLOCK_COMMENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public LabContext name;
		public Other_expressionContext value;
		public TerminalNode DATA_TYPE_VARIABLE() { return getToken(CParser.DATA_TYPE_VARIABLE, 0); }
		public TerminalNode OPERATOR_ASSIGN() { return getToken(CParser.OPERATOR_ASSIGN, 0); }
		public LabContext lab() {
			return getRuleContext(LabContext.class,0);
		}
		public Other_expressionContext other_expression() {
			return getRuleContext(Other_expressionContext.class,0);
		}
		public TerminalNode END() { return getToken(CParser.END, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(DATA_TYPE_VARIABLE);
				setState(55);
				((VariableContext)_localctx).name = lab();
				setState(56);
				match(OPERATOR_ASSIGN);
				setState(57);
				((VariableContext)_localctx).value = other_expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(DATA_TYPE_VARIABLE);
				setState(60);
				((VariableContext)_localctx).name = lab();
				setState(61);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_parameterContext extends ParserRuleContext {
		public LabContext name;
		public TerminalNode DATA_TYPE_VARIABLE() { return getToken(CParser.DATA_TYPE_VARIABLE, 0); }
		public LabContext lab() {
			return getRuleContext(LabContext.class,0);
		}
		public Function_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterFunction_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitFunction_parameter(this);
		}
	}

	public final Function_parameterContext function_parameter() throws RecognitionException {
		Function_parameterContext _localctx = new Function_parameterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(DATA_TYPE_VARIABLE);
			setState(66);
			((Function_parameterContext)_localctx).name = lab();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_operationContext extends ParserRuleContext {
		public LabContext name;
		public Other_expressionContext value;
		public TerminalNode OPERATOR_ASSIGN() { return getToken(CParser.OPERATOR_ASSIGN, 0); }
		public LabContext lab() {
			return getRuleContext(LabContext.class,0);
		}
		public Other_expressionContext other_expression() {
			return getRuleContext(Other_expressionContext.class,0);
		}
		public Assign_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterAssign_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitAssign_operation(this);
		}
	}

	public final Assign_operationContext assign_operation() throws RecognitionException {
		Assign_operationContext _localctx = new Assign_operationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assign_operation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((Assign_operationContext)_localctx).name = lab();
			setState(69);
			match(OPERATOR_ASSIGN);
			setState(70);
			((Assign_operationContext)_localctx).value = other_expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Other_expressionContext extends ParserRuleContext {
		public Other_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_expression; }
	 
		public Other_expressionContext() { }
		public void copyFrom(Other_expressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BinaryExpressionContext extends Other_expressionContext {
		public Token op;
		public List<Other_expressionContext> other_expression() {
			return getRuleContexts(Other_expressionContext.class);
		}
		public Other_expressionContext other_expression(int i) {
			return getRuleContext(Other_expressionContext.class,i);
		}
		public TerminalNode OPERATOR_AND() { return getToken(CParser.OPERATOR_AND, 0); }
		public TerminalNode OPERATOR_OR() { return getToken(CParser.OPERATOR_OR, 0); }
		public BinaryExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterBinaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitBinaryExpression(this);
		}
	}
	public static class CompareExpressionContext extends Other_expressionContext {
		public Token op;
		public List<Other_expressionContext> other_expression() {
			return getRuleContexts(Other_expressionContext.class);
		}
		public Other_expressionContext other_expression(int i) {
			return getRuleContext(Other_expressionContext.class,i);
		}
		public TerminalNode OPERATOR_EQ() { return getToken(CParser.OPERATOR_EQ, 0); }
		public TerminalNode OPERATOR_GT() { return getToken(CParser.OPERATOR_GT, 0); }
		public TerminalNode OPERATOR_GE() { return getToken(CParser.OPERATOR_GE, 0); }
		public TerminalNode OPERATOR_LE() { return getToken(CParser.OPERATOR_LE, 0); }
		public TerminalNode OPERATOR_LT() { return getToken(CParser.OPERATOR_LT, 0); }
		public CompareExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterCompareExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitCompareExpression(this);
		}
	}
	public static class AddExpressionContext extends Other_expressionContext {
		public Other_expressionContext left;
		public Add_or_substractContext op;
		public Other_expressionContext right;
		public List<Other_expressionContext> other_expression() {
			return getRuleContexts(Other_expressionContext.class);
		}
		public Other_expressionContext other_expression(int i) {
			return getRuleContext(Other_expressionContext.class,i);
		}
		public Add_or_substractContext add_or_substract() {
			return getRuleContext(Add_or_substractContext.class,0);
		}
		public AddExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterAddExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitAddExpression(this);
		}
	}
	public static class AtomExpressionContext extends Other_expressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterAtomExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitAtomExpression(this);
		}
	}
	public static class LabelExpressionContext extends Other_expressionContext {
		public TerminalNode LABEL() { return getToken(CParser.LABEL, 0); }
		public LabelExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterLabelExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitLabelExpression(this);
		}
	}
	public static class ParExpressionContext extends Other_expressionContext {
		public TerminalNode LEFT_PAR() { return getToken(CParser.LEFT_PAR, 0); }
		public Other_expressionContext other_expression() {
			return getRuleContext(Other_expressionContext.class,0);
		}
		public TerminalNode RIGHT_PAR() { return getToken(CParser.RIGHT_PAR, 0); }
		public ParExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterParExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitParExpression(this);
		}
	}
	public static class FunctionExpressionContext extends Other_expressionContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public FunctionExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterFunctionExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitFunctionExpression(this);
		}
	}
	public static class MultiplicationOrDivideExpressionContext extends Other_expressionContext {
		public Other_expressionContext left;
		public Multiplication_or_divideContext op;
		public Other_expressionContext right;
		public List<Other_expressionContext> other_expression() {
			return getRuleContexts(Other_expressionContext.class);
		}
		public Other_expressionContext other_expression(int i) {
			return getRuleContext(Other_expressionContext.class,i);
		}
		public Multiplication_or_divideContext multiplication_or_divide() {
			return getRuleContext(Multiplication_or_divideContext.class,0);
		}
		public MultiplicationOrDivideExpressionContext(Other_expressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterMultiplicationOrDivideExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitMultiplicationOrDivideExpression(this);
		}
	}

	public final Other_expressionContext other_expression() throws RecognitionException {
		return other_expression(0);
	}

	private Other_expressionContext other_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Other_expressionContext _localctx = new Other_expressionContext(_ctx, _parentState);
		Other_expressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_other_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new ParExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(73);
				match(LEFT_PAR);
				setState(74);
				other_expression(0);
				setState(75);
				match(RIGHT_PAR);
				}
				break;
			case 2:
				{
				_localctx = new FunctionExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(77);
				func_call();
				}
				break;
			case 3:
				{
				_localctx = new LabelExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(78);
				match(LABEL);
				}
				break;
			case 4:
				{
				_localctx = new AtomExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(79);
				atom();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(96);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new MultiplicationOrDivideExpressionContext(new Other_expressionContext(_parentctx, _parentState));
						((MultiplicationOrDivideExpressionContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_other_expression);
						setState(82);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(83);
						((MultiplicationOrDivideExpressionContext)_localctx).op = multiplication_or_divide();
						setState(84);
						((MultiplicationOrDivideExpressionContext)_localctx).right = other_expression(9);
						}
						break;
					case 2:
						{
						_localctx = new AddExpressionContext(new Other_expressionContext(_parentctx, _parentState));
						((AddExpressionContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_other_expression);
						setState(86);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(87);
						((AddExpressionContext)_localctx).op = add_or_substract();
						setState(88);
						((AddExpressionContext)_localctx).right = other_expression(8);
						}
						break;
					case 3:
						{
						_localctx = new BinaryExpressionContext(new Other_expressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_other_expression);
						setState(90);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(91);
						((BinaryExpressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==OPERATOR_AND || _la==OPERATOR_OR) ) {
							((BinaryExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(92);
						other_expression(4);
						}
						break;
					case 4:
						{
						_localctx = new CompareExpressionContext(new Other_expressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_other_expression);
						setState(93);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(94);
						((CompareExpressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATOR_EQ) | (1L << OPERATOR_GT) | (1L << OPERATOR_GE) | (1L << OPERATOR_LT) | (1L << OPERATOR_LE))) != 0)) ) {
							((CompareExpressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(95);
						other_expression(3);
						}
						break;
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public LabContext name;
		public Args_listContext args;
		public TerminalNode DATA_TYPE_VARIABLE() { return getToken(CParser.DATA_TYPE_VARIABLE, 0); }
		public TerminalNode LEFT_PAR() { return getToken(CParser.LEFT_PAR, 0); }
		public TerminalNode RIGHT_PAR() { return getToken(CParser.RIGHT_PAR, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(CParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(CParser.RIGHT_BRACE, 0); }
		public LabContext lab() {
			return getRuleContext(LabContext.class,0);
		}
		public Args_listContext args_list() {
			return getRuleContext(Args_listContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitFunction_declaration(this);
		}
	}
